--- a/public/chat.html
+++ b/public/chat.html
@@ -56,7 +56,7 @@
       </form>
     </div>
   </div>
-  <script src="/node_modules/socket.io/client-dist/socket.io.js"></script>
+  <script src="../socket.io/socket.io.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
