--- a/public/chat.html
+++ b/public/chat.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.css">
   <title>ChatCord App</title>
+  <script src="../node_modules/socket.io/client-dist/socket.io.js"></script>
 </head>
 <body>
   <div class="chat-container">
