--- a/public/chat.html
+++ b/public/chat.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.css">
   <title>ChatCord App</title>
-  <script src="../node_modules/socket.io/client-dist/socket.io.js"></script>
+<!--  <script src="../node_modules/socket.io/client-dist/socket.io.js"></script>-->
 </head>
 <body>
   <div class="chat-container">
@@ -28,20 +28,6 @@
         </ul>
       </div>
       <div class="chat-messages">
-					<div class="message">
-						<p class="meta">Brad <span>9:12pm</span></p>
-						<p class="text">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
-							repudiandae.
-						</p>
-					</div>
-					<div class="message">
-						<p class="meta">Mary <span>9:15pm</span></p>
-						<p class="text">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
-							repudiandae.
-						</p>
-					</div>
       </div>
     </main>
     <div class="chat-form-container">
@@ -57,6 +43,7 @@
       </form>
     </div>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.4/qs.min.js" integrity="sha512-BHtomM5XDcUy7tDNcrcX1Eh0RogdWiMdXl3wJcKB3PFekXb3l5aDzymaTher61u6vEZySnoC/SAj2Y/p918Y3w==" crossorigin="anonymous"></script>
   <script src="../socket.io/socket.io.min.js"></script>
   <script src="js/main.js"></script>
 </body>
